# opengl-playground

./: CMakeLists.txt
model/source/: Koharu.mtl
src/: 3d_main.cpp  Character.cpp  Character.h  Image.cpp  Image.h  Logic.cpp  Logic.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Model3D.cpp  Model3D.h  Shader.cpp  Shader.h  Windows.cpp  Windows.h  main.cpp
test/: test_character.cpp
